Upgrade Java version from 17 to 21 using OpenRewrite recipe