@@ -37,7 +37,7 @@ public class DebitCardProcessor implements PaymentProcessor {
         
         String transactionId = "DC-" + UUID.randomUUID().toString().substring(0, 8);
         String maskedCard = maskCardNumber(request.getCardNumber());
-        String message = String.format("Debit card payment of $%.2f processed successfully for '%s'. Card: %s",
+        String message = "Debit card payment of $%.2f processed successfully for '%s'. Card: %s".formatted(
                 request.getAmount(), request.getBookName(), maskedCard);
         
         logger.info("Transaction ID: {}", transactionId);
